[package]
name = "hs-rust-nation-2026"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "drive"
path = "src/main.rs"

[dependencies]
anyhow = "1"
env_logger = "0.11"
log = "0.4"
opencv = { version = "0.98.1", features = [
  "aruco",
  "aruco_detector",
  "calib3d",
  "clang-runtime",
  "imgcodecs",
  "imgproc",
  "objdetect"
] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
